# MyAgents

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_macos.sh  build_windows.ps1  eslint.config.js  package.json  setup.sh  setup_windows.ps1
bundled-skills/summarize/: SKILL.md
specs/: version.md
specs/guides/: design_guide.md  windows_build_guide.md
specs/research/: calendar_integration_research.md
specs/tech_docs/: architecture.md  bundled_bun.md  im_integration_architecture.md  proxy_config.md  sdk_canUseTool_guide.md  sdk_custom_tools_guide.md  session_id_architecture.md  session_singleton_architecture.md  session_state_sync.md  session_storage.md  third_party_providers.md  windows_platform_guide.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/nsis/languages/: English.nsh  SimpChinese.nsh
src-tauri/src/: commands.rs  cron_task.rs  lib.rs  logger.rs  management_api.rs  proxy_config.rs  sidecar.rs  tray.rs  updater.rs
src-tauri/src/im/: adapter.rs  buffer.rs  feishu.rs  health.rs  heartbeat.rs  mod.rs  router.rs  telegram.rs  types.rs  util.rs
src/renderer/: App.tsx  index.css
src/renderer/analytics/: device.ts  tracker.ts  types.ts
src/renderer/api/: SseConnection.ts  chatClient.ts  cronTaskClient.ts  sessionClient.ts  sseClient.ts  tauriClient.ts
src/renderer/components/: AgentCapabilitiesPanel.tsx  AgentCards.tsx  AgentDetailPanel.tsx  BlockGroup.tsx  ChatInput.tsx  ClaudeMdEditor.tsx  CommandDetailPanel.tsx  ContextMenu.tsx  CustomSelect.tsx  CustomTitleBar.tsx  DirectoryPanel.tsx  FilePreviewModal.tsx  GlobalAgentsPanel.tsx  GlobalSkillsPanel.tsx  Markdown.tsx  Message.tsx  MessageList.tsx  MonacoEditor.tsx  ProcessRow.tsx  QueuedMessageBubble.tsx  SessionHistoryDropdown.tsx  SessionStatsModal.tsx  SimpleChatInput.tsx  SkillDetailPanel.tsx  SkillsCommandsList.tsx  SortableTabItem.tsx  TabBar.tsx  UnifiedLogsPanel.tsx  WorkspaceAgentsList.tsx  WorkspaceConfigPanel.tsx
src/renderer/components/ImSettings/: ImBotDetail.tsx  ImBotList.tsx  ImBotWizard.tsx  ImSettings.tsx  index.ts  (+1 more)
src/renderer/config/: configService.ts  types.ts
src/renderer/context/: FileActionContext.tsx  TabContext.tsx  TabProvider.tsx
src/renderer/hooks/: useAutoScroll.ts  useAutostart.ts  useBackgroundTaskPolling.ts  useConfig.ts  useCronTask.ts  useTrayEvents.ts  useUpdater.ts
src/renderer/pages/: Chat.tsx  Launcher.tsx  Settings.tsx
src/renderer/services/: notificationService.ts
src/renderer/types/: chat.ts  cronEvents.ts  cronTask.ts  queue.ts  tab.ts
src/renderer/utils/: browserMock.ts  pathDetection.ts
src/server/: SessionStore.ts  agent-session.ts  index.ts  provider-verify.ts  sse.ts
src/server/agents/: agent-loader.ts
src/server/tools/: cron-tools.ts  im-cron-tool.ts
src/server/types/: session.ts
src/shared/: agentCommands.ts  agentTypes.ts  constants.ts  fileTypes.ts  skillsTypes.ts  slashCommands.ts  utils.ts
src/shared/types/: im.ts  ipc.ts
(+31 files in other folders)
